force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/APXT_CongaSign__FinalDocumentsSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>APXT_CongaSign__FinalDocumentsSyncStatus__c</fullName>
    <label>Final Document Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>NONE</label>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>PARTIAL</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>