force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/Parent_001__c.field-meta.xml
<CustomField>
    <fullName>Parent_001__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>APXT_CongaSign_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>