force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/Parent_003__c.field-meta.xml
<CustomField>
    <fullName>Parent_003__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>APXT_CongaSign_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>