force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/Parent_006__c.field-meta.xml
<CustomField>
    <fullName>Parent_006__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>APXT_CongaSign_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>