force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/Parent_00Q__c.field-meta.xml
<CustomField>
    <fullName>Parent_00Q__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>APXT_CongaSign_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>