force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/Parent_0Q0__c.field-meta.xml
<CustomField>
    <fullName>Parent_0Q0__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>APXT_CongaSign_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>